<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_play"
            android:icon="@drawable/ic_menu_play"
            android:title="@string/nav_item_play" />
        <item
            android:id="@+id/nav_cache"
            android:icon="@drawable/ic_menu_cache"
            android:title="@string/nav_item_cache" />
        <item
            android:id="@+id/nav_download"
            android:icon="@drawable/ic_menu_download"
            android:title="@string/nav_item_download" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_setting"
            android:title="@string/nav_item_setting" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/nav_item_share" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/nav_item_about" />
    </group>

</menu>
